--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -33,19 +33,18 @@ securityContext: {}
 
 service:
   type: LoadBalancer
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-subnets: 
-      - subnet-0e8b85821a1b71153
-      - subnet-0e003d41c4497a525
   # The other accepted value is 'LoadBalancer'
   port: 80
 
 ingress:
-  enabled: false 
+  enabled: true 
   # If service type is 'LoadBalancer', the ingress should be disabled aka 'false'
   className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-subnets: 
+      - subnet-0e8b85821a1b71153
+      - subnet-0e003d41c4497a525
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: ""
