--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -34,17 +34,22 @@ securityContext: {}
 service:
   type: LoadBalancer
   # The other accepted value is 'LoadBalancer'
+  annotations:
+  # kubernetes.io/ingress.class: alb
+  # alb.ingress.kubernetes.io/scheme: internal
+  service.beta.kubernetes.io/aws-load-balancer-type: nlb
+  service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0e8b85821a1b71153, subnet-0e003d41c4497a525"
   port: 80
 
 ingress:
-  enabled: true 
+  enabled: false 
   # If service type is 'LoadBalancer', the ingress should be disabled aka 'false'
   className: ""
   annotations:
     # kubernetes.io/ingress.class: alb
     # alb.ingress.kubernetes.io/scheme: internal
-    service.beta.kubernetes.io/aws-load-balancer-type: nlb
-    service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0e8b85821a1b71153, subnet-0e003d41c4497a525"
+    # service.beta.kubernetes.io/aws-load-balancer-type: nlb
+    # ervice.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0e8b85821a1b71153, subnet-0e003d41c4497a525"
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
