--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -34,11 +34,11 @@ securityContext: {}
 service:
   type: LoadBalancer
   # The other accepted value is 'LoadBalancer'
-  annotations:
+  # annotations:
   # kubernetes.io/ingress.class: alb
   # alb.ingress.kubernetes.io/scheme: internal
-  service.beta.kubernetes.io/aws-load-balancer-type: nlb
-  service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0a3640c50006b6fec"
+  # service.beta.kubernetes.io/aws-load-balancer-type: nlb
+  # service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0a3640c50006b6fec"
   port: 80
 
 ingress:
@@ -49,7 +49,7 @@ ingress:
     # kubernetes.io/ingress.class: alb
     # alb.ingress.kubernetes.io/scheme: internal
     # service.beta.kubernetes.io/aws-load-balancer-type: nlb
-    # ervice.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0e8b85821a1b71153, subnet-0e003d41c4497a525"
+    service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0a3640c50006b6fec"
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
