--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   pullPolicy: IfNotPresent
-  repository: 729958084820.dkr.ecr.us-east-1.amazonaws.com/gitops-argocd
+  repository: 115177268320.dkr.ecr.us-east-1.amazonaws.com/gitops-argocd
   version: main-3467ebb
 
 imagePullSecrets: []
@@ -35,29 +35,25 @@ service:
   port: 80
   type: LoadBalancer
 
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0c9f2f2c9ce16976f, subnet-05326030943023d04"
-
 # service:
 #   type: LoadBalancer 
 #   # The other accepted value is 'LoadBalancer'
 #   port: 80
 
 ingress:
-  enabled: false 
-  # If service type is 'LoadBalancer', the ingress should be disabled aka 'false'
+  enabled: true
   className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: alb
-    # alb.ingress.kubernetes.io/scheme: internal
-    # service.beta.kubernetes.io/aws-load-balancer-name: "k8s-nlb"
-    # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
-    # service.beta.kubernetes.io/aws-load-balancer-type: "elb"
-    # service.beta.kubernetes.io/aws-load-balancer-internal: "true"
-    # service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
-    # service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0a9d7e30f0252296a, subnet-0caa6a5a9945dcbb4"
+  annotations:
+    kubernetes.io/ingress.class: alb
     # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:115177268320:certificate/cf001ea8-68ad-42ff-ba81-4ab10dfb6ca0
+    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
+    alb.ingress.kubernetes.io/ssl-redirect: '443' 
+    alb.ingress.kubernetes.io/scheme: internal
+    # alb.ingress.kubernetes.io/target-type: ip    
+    alb.ingress.kubernetes.io/target-type: instance
+    alb.ingress.kubernetes.io/subnets: "subnet-0cff4d25fa00a970b, subnet-01dc1c678e6e16483, subnet-041eb32a915e0f9c3"
   hosts:
     - host: ""
       paths:
