--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -42,14 +42,14 @@ service:
 
 ingress:
   enabled: true
-  className: "alb"
+  className: alb
   annotations:
-    kubernetes.io/ingress.class: alb
+#     kubernetes.io/ingress.class: alb
     # kubernetes.io/ingress.class: nginx
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:115177268320:certificate/cf001ea8-68ad-42ff-ba81-4ab10dfb6ca0
-    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
-    alb.ingress.kubernetes.io/ssl-redirect: '443' 
+#     alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
+#     alb.ingress.kubernetes.io/ssl-redirect: '443' 
 #     alb.ingress.kubernetes.io/scheme: internal
     # alb.ingress.kubernetes.io/target-type: ip    
     alb.ingress.kubernetes.io/target-type: instance
