--- a/charts/helm-k8s/values.yaml
+++ b/charts/helm-k8s/values.yaml
@@ -42,7 +42,7 @@ service:
 
 ingress:
   enabled: true
-  className: alb
+  className: nginx
   annotations:
 #     kubernetes.io/ingress.class: alb
     # kubernetes.io/ingress.class: nginx
